[gd_scene load_steps=17 format=2]

[ext_resource path="res://Dungeon Tileset/creatures.png" type="Texture" id=1]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Hitbox Hurtbox/hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitbox Hurtbox/hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Bat.gd" type="Script" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 16.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=9]
radius = 138.101

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Bat" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "fly"
frame = 3
playing = true

[node name="Stats" parent="." instance=ExtResource( 2 )]
maxhealth = 2

[node name="hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 7 )

[node name="hitbox" parent="." instance=ExtResource( 3 )]
input_pickable = false
collision_mask = 4

[node name="collisionshape2d" parent="hitbox" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 8 )
disabled = false

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 9 )
[connection signal="nohealth" from="Stats" to="." method="_on_Stats_nohealth"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]

[editable path="hurtbox"]

[editable path="hitbox"]

[editable path="PlayerDetectionZone"]
